<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/title_bar"
        layout="@layout/module_include_title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_padding">

        <EditText
            android:id="@+id/edt_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hit_edt_mobile"
            style="@style/style_edt"
            android:inputType="phone"
            android:maxLength="11" />

        <EditText
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_mobile"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:maxLength="20"
            android:hint="@string/hit_edt_password"
            style="@style/style_edt"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_pwd"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="登录"
            style="@style/style_btn"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:text="@string/register"
            style="@style/style_href" />

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_alignParentRight="true"
            android:text="@string/forget"
            style="@style/style_href" />

    </RelativeLayout>


</LinearLayout>
