<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/module_include_title_bar" />

    <RelativeLayout
        style="@style/MyPadding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edt_mobile"
            style="@style/EdtTopBottomLeft"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/gray_border_bg_shape"
            android:hint="@string/hint_input_mobile"
            android:inputType="phone"
            android:maxLength="11" />

        <EditText
            android:id="@+id/edt_pwd"
            style="@style/EdtTopBottomLeft"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_below="@+id/edt_mobile"
            android:background="@drawable/gray_border_bg_shape"
            android:hint="@string/hint_input_pwd"
            android:maxLength="20"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edt_confirm"
            style="@style/EdtTopBottomLeft"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_below="@+id/edt_pwd"
            android:background="@drawable/gray_border_bg_shape"
            android:hint="@string/hint_confirm_pwd"
            android:maxLength="20"
            android:maxLines="1" />

        <Button
            android:id="@+id/btn_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_confirm"
            android:layout_marginTop="162px"
            android:background="@drawable/btn_bg_selector"
            android:text="确定"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size" />


    </RelativeLayout>

</LinearLayout>
